<resources>
    <string name="app_name">TrackerViewer</string>
    <string name="preference_file_key">com.reas.trackerview.PREFERENCE_FILE_KEY</string>

    <string name="user_email">email@email.com</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_calls">Calls</string>
    <string name="nav_location_history">Location History</string>
    <string name="nav_location_live">Live Location</string>
    <string name="nav_ussd">USSD</string>
    <string name="nav_settings">Settings</string>

    <string name="hello_messages_fragment">Hello messages</string>
    <string name="hello_calls_fragment">Hello calls</string>
    <string name="hello_ussd_fragment">Hello ussd</string>
    <string name="hello_location_fragment">Hello location</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="login_success">Login Successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="user_create_success">User account creation successful</string>
    <string name="user_create_fail">User account creation unsuccessful</string>

    <string name="logout">Log Out</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>

    <string name="apply">Apply</string>


    <!--    Location History Fragment-->
    <string name="no_location">No location recorded for this date</string>
    <string name="downloading">Getting your files</string>
    <string name="processing">Processing data</string>


    <!-- Preference Titles -->
    <string name="location_header">Location</string>
    <string name="sync_header">Sync</string>


    <!-- Messages Preferences -->
    <string name="location_title">Location Interval</string>
    <string name="location_dialog_message">Enter the interval in Milliseconds</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>