<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/location_header">


        <EditTextPreference
                app:key="locationInterval"
                app:title="@string/location_title"
                app:useSimpleSummaryProvider="true"
                android:positiveButtonText="@string/apply"
                android:dialogLayout="@layout/dialog_interval"
        />

        <ListPreference
                app:key="reply"
                app:title="@string/reply_title"
                app:entries="@array/reply_entries"
                app:entryValues="@array/reply_values"
                app:defaultValue="reply"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/sync_header">

        <SwitchPreferenceCompat
                app:key="sync"
                app:title="@string/sync_title"/>

        <SwitchPreferenceCompat
                app:key="attachment"
                app:title="@string/attachment_title"
                app:summaryOn="@string/attachment_summary_on"
                app:summaryOff="@string/attachment_summary_off"
                app:dependency="sync"/>

    </PreferenceCategory>

</PreferenceScreen>